# trimatch

./: README.md  pyproject.toml  trimatch.py  trimatch_gui.py
