[project]
name = "trimatch_gui"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Huang"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "noise (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
